Added Codepen link for inspo

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                     <i class="fas fa-palette"></i>
                     <span>Toggle Colors</span>
                 </button>
+                 <button class="control-btn" id="music-toggle" onclick="window.open('https://codepen.io/search/pens?q=cyberpunk+glow', '_blank')">
+                    <i class="fas fa-lightbulb"></i>
+                    <span>Inspiration</span>
+                </button>
                 <button class="control-btn" id="particle-toggle">
                     <i class="fas fa-sparkles"></i>
                     <span>Particles</span>
@@ -376,7 +380,7 @@
                     </div>
                     <div class="social-links">
                         <a href="http://github.com/DrexReeeeee" target="_blank"><i class="fab fa-github"></i> </a>
-                        <a href="www.linkedin.com/in/drixy-reece-irish-nacu-49627b108" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/drixy-reece-irish-nacu-49627b108/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://www.facebook.com/drixyl.nacu" target="_blank"><i class="fab fa-facebook"></i></a>
                         <a href="https://discordapp.com/users/786581917990125569" target="_blank"><i class="fab fa-discord"></i></a>
                     </div>
